--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <link rel="icon" href="google-logo.svg">
+    <title>Google Search</title>
 </head>
 <body>
-    <h1>hello to my web</h1>
-    <h2> hello again </h2>
-    hello world
+    <header>
+        <div id="elements">
+            <a class="element-links" href="img_search.html">Image Google Search</a>
+            <a class="element-links" href="advanced_search.html">Advanced Google Search</a>
+        </div>
+    </header>
+    <main id="main">
+        <img id="google_img" src="google.svg" alt="Google Logo">
+        <form action="https://google.com/search">
+            <input id="input_text" type="text" name="q" placeholder="Google Search">
+            <div id="divo">
+                <input id="input_submit" type="submit" value="Google Search" >
+                <input id="i_felling_lucky" type="submit" value="I'm Feeling Lucky" name="btnI">
+
+            </div>
+        </form>
+
+    </main>
 </body>
 </html>
